[General][VM][Qt] Merge upstream 2015-08-05 .

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,38 @@
+8/5/2015
+
+[WINMAIN] support menu to enable/disable correct fdc timing
+
+[VM/DISK] improve to check both id crc error and data crc error
+[VM/I286] fix issue that emulation may go to infinite loop when cpu is halted
+[VM/MB8877] fix index hole signal width to 5msec (thanks Mr.Sato)
+[VM/MB8877] improve drq signal timing to check E flag of type-2 and 3 commands
+[VM/MB8877] improve drq signal timing for write track command
+[VM/MB8877] improve data lost timing for write sector and write track commands
+[VM/MB8877] improve to check both id crc error and data crc error
+[VM/UPD765A] improve timing to go to exec phase
+[VM/UPD765A] improve to check both id crc error and data crc error
+[VM/Z80SIO] improve transmitting timing (thanks Mr.Sato)
+
+[FMR50/BIOS] improve to check both id crc error and data crc error
+[FMR50/BIOS] improve write track command for sectors without data field
+[MSX2/MEMORY] improve to check both id crc error and data crc error
+
+
+8/3/2015
+
+[VM/DISK] support sectors without data field
+[VM/MB8877] improve drq signal timing for write sector command (thanks Mr.Sato)
+[VM/MB8877] improve index hole signal width (thanks Mr.Sato)
+[VM/MB8877] improve read/write command to wait at least 60msec after seeking
+[VM/MB8877] improve seek command not to set seek error without verify flag
+[VM/MB8877] improve read/write sector commands for sectors without data field
+[VM/MB8877] improve write track command for sectors without data field
+[VM/MB8877] improve force interrupt command to finish write track command
+[VM/MB8877] remove ugly patch for MZ-2500 RELICS
+[VM/UPD765A] improve read/write sector commands for sectors without data field
+[VM/Z80SIO] improve transmitting timing (thanks Mr.Sato)
+
+
 8/1/2015
 
 [WINMAIN] support menu to modify write protected status of floppy disk image
