[DOC] Update documents to SNAPSHOT 2015-11-05-1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
 
+* SNAPSHOT Nov 05. 2015
+  * Merged Upstream 2015-10-31 , thanks for Takeda-San.
+  * Qt: Change Draw method from QOpenGLFunctions_2_0 to QOpenGLFunctions, expect to work with OpenGL ES 2.0, without OpenGL.
+  * FM7: Fix problem of LSHIFT and RSHIFT.
+  * Qt: Add OpenGL rendereded scan line.
+  * OpenGL: Use GLSL to rendering.
+  * Win32/Qt: Enable to build with MinGW32 and Qt 5.5.1, please test!!!
+  
+  * Built with commit 3e6efd7c7930393e4976579605ac345be67a8e13 excepts with newer documents.
+  
+-- Nov 05, 2015 17:21:22 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Oct 29, 2015
   * Merged Upstream 2015-10-27.
   * All of virtual machines are enabled to build.
