[DOC] Update documents with SNAPSHOT 2015-11-17.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Nov 17, 2015
+  * Qt: (MAYBE) Working with Windows XP, but not tested enough to.
+  * Qt: Working Auto key (paste from clipboard) feature.
+  * Qt/Emu: More thread-safety calling via UI <-> EMU.
+  * VM/MSX2: Fix wrong color built with Qt.
+  * Update credits, thanks to umaiboux San.
+  * Built with commit 64f901722d3382bc3feb6680a5ede240dcad2773 and newer Documents.
+  
+-- Nov 17, 2015 20:31:00 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Nov 14. 2015
   * Qt/GUI: Integrate menus to meta-class.
   * Win32/Qt: Enable to build with MinGW32 and Qt 5.5.1, please test!!!
