--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,10 @@
   * FM7 series: Variable virtual screen size, see src/vm/fm7/display.cpp .
   * X1 series: Double buffering for TEXT/PCG.
   * Built with commit 24709b7e0ffdd2714266c487465cc4b37208aace .
-  
--- Dec 22, 2015 16:43:26 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+    PASOPIA7, PC-6601SR and PC-8001mk2SR are built with 
+    commit daddbc5ac974be890f545d0a0cd68730fdce154f.
+
+-- Dec 22, 2015 17:48:15 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT Dec 10, 2015
   * MERGE upstream 2015-12-10 .
