--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,20 @@
+12/31/2015
+
+[VM/MZ1P17] support underline, hiragana mode, and color mode
+
+
+12/30/2015
+
+[COMMON] add jis_to_sjis() function
+[EMU] fix to delete OSD instance after delete VM instance
+[EMU/OSD] improve functions to manipulate bitmaps and fonts
+
+[VM/PRNFILE] support save/load state
+[VM/MZ1P17] support MZ-1P17
+
+[MZ2500/PRINTER] support dummy printer device and MZ-1P17
+
+
 12/23/2015
 
 [ALL] fix for UNICODE character set case
