--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Jan 07, 2016
+  * MERGE upstream 2015-12-31, with printer emulations.
+  * A lot of fixes.
+  * Enable to build with MinGW / Win32.
+  * FM7: Add aspect ratio 4:3 modes.
+  * FM7: Add support printer and Dempa shinbum-sha's Joy stick.
+  * Built with commit f57d9c993a317ae1d08ddc7ed1576823a3244446 .
+
+-- Jan 07, 2016 20:50:57 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Dec 22, 2015
   * MERGE upstream 2015-12-17, support new APIs .
   * Change APIs to upstream's OSD class , apply to Qt.
