--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,19 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Feb 26, 2016
+  * Merge upstream 2016-02-26.
+  * Windows: Fix wrond key conversion from SCAN to VK.
+  * Enable to build within native Windows host with MinGW.
+  * Debugger: Fix weird command interpreting.
+  * FM7: Fix wrong key assigning.
+  * FM7/6809: Fix wrond debugger APIs.
+  * Help Menu: Add FAQs and about settings of BIOS and Key assigns.
+  * Add documentation how to build.
+  * Built with commit c64bd7e03b0a11d094dbdd7e242d5166451d8301 or later .
+
+-- Feb 26, 2016 19:47:43 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
+	
 * SNAPSHOT Feb 25, 2016
   * Merge UPSTREAM 2016-02-21.
   * Support NEW APIs.
