--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,11 +1,24 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Mar 03, 2016
+  * Merge upstream 2016-03-01. Applying new APIs.
+  * [FM8] Fix wrong sequence of selecting BOOT ROMS when reading/writing $FD0F,
+    Thanks for Anna_Wu .
+  * [UI/Qt] Re-Working "Paste from clipboard", apply to new APIs.
+  * [UI/Qt] Fix character encoding of config file 
+            when not using UTF-8 as local encoding.
+  * [General] Enable to build with LLVM Clang at least 3.7. Another
+              versions are not tested yet.
+  * Built with commit 92d31065cadd027a389416b60f8ae13bb4911e1c or later.
+ 
+-- Mar 03, 2016 22:58:58 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Feb 26, 2016 HOTFIX 1
   * [FM7/77/8] Fix reset sequence of PSG/OPN/WHG/THG.
     This fixes lower tone of PSG with FM-7/77.
   * Built with commit 2e87abcb02cee28532215484517d999b561817a3 + .
 
--- Sat 27, 2016 01:37:13 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Feb 27, 2016 01:37:13 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT Feb 26, 2016
   * Merge upstream 2016-02-26.
@@ -18,7 +31,7 @@
   * Add documentation how to build.
   * Built with commit 82115ccfbcd6c8493933e518779c1d7f70940c9f or later .
 
--- Sat 27, 2016 00:13:09 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Feb 27, 2016 00:13:09 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 	
 * SNAPSHOT Feb 25, 2016
   * Merge UPSTREAM 2016-02-21.
