--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,6 +1,7 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
-* SNAPSHOT Mar 10, 2016
+* SNAPSHOT Mar 11, 2016
+  * "Pray for all people injured by Great East Japan Earthquake"
   * Merge upstream 2016-03-05. Fix some FTBFSs with SCSI and FMR30/50.
   * [Menu/Qt] Fix some unification spells at menu, thanks to Anna_Wu.
   * [UI/Qt] Add icons a lot, from mate-icon-theme source package @
@@ -11,10 +12,12 @@
     Thanks to http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/528,530 .
   * [Qt/Sound] Update sound volume setting dialog.
   * [Qt/BMJr] Fix not input some keys with Qt.
+  * [FM7] Detect 太陽の神殿 for FM-7 series to correct transfer
+    timing automatically.
   * Fix bugs a bit.
-  * Built with commit 3c795bcbc6eb3888af057825945ab05d57b7eae4 or later.
+  * Built with commit 9bf4e859273593bffa3ce5b55382776df6171536 or later.
  
--- Mar 10, 2016 22:51:52 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Mar 11, 2016 01:50:52 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT Mar 04, 2016
   * Merge upstream 2016-03-01. Applying new APIs.
