--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,23 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Mar 24, 2016
+  * Merge upstream 2016-03-17 .
+  * [FM7] Fix some weird works (i.e: not booting DEATH-Force) without construct VM twice, now construct VM a time.
+  * [UI/PCENGINE] Add support CD-ROM^2 (but not tested yet, I don't have any image).
+  * [VM/MB8877] Probe some status via read_signal().
+  * [BUILD/GCC] Use -Og instead of -O3.
+  * [UI/MZ3500/HC80/QC10] Fix not set dip-switches.
+  * [UI/JOYSTICK] Support Label of buttons.
+  * [UI] Add supporting printers with more VMs.
+  * [UI/MZ80] Enable select PCG-800/1200.
+  * [UI/MZ700] Enable select PCG-700.
+  * [VM/FMGEN] PSG: Fix volumes are not independed via another PSG/SSG devices. Thanks to umaiboux.
+               See: http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/576
+  * [VM/FM-8] Add support Bubble Casette, this is not complete implement , but seems to work.
+  * Built with commit ea4930417b9b0ab1dbb34babf2ab95fa20012312.
+
+-- Mar 24, 2016 19:57:50 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT Mar 11, 2016
   * "Pray for all people injured by Great East Japan Earthquake"
   * Merge upstream 2016-03-05. Fix some FTBFSs with SCSI and FMR30/50.
