--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -4,7 +4,7 @@
   * Merge upstream 2016-04-13 .
   * [General] Fix save/load state.
   * [General] Build with GCC6 for GNU/Linux .
-  * [General] Build with "-g -Os -foptimize-strlen -fvect-cost-model=dynamic -ftree-vectorize",
+  * [General] Build with "-g -O2 -fvect-cost-model=dynamic -ftree-vectorize",
     not with "-g -Og" .
   * [FM77AV] Fix not repeating with scan key mode, fixed YS2. 
   * [FM7/Display] VRAM: Fix positioning of wrote line .
@@ -16,7 +16,7 @@
   * [Qt/Sound] Fix wrong balance and volume after re-starting.
     i.e:) With 0db and panning to right, and re-starting, volume and balance hasn't kept.
 
--- Apr 28, 2016 00:09:07 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Apr 28, 2016 00:51:34 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT Apr 09, 2016
   * Merge upstream 2016-04-01 .
